--- a/public/global.css
+++ b/public/global.css
@@ -51,3 +51,17 @@ body {
     --color-text-1: #c05555;
     --box-shadow: 0px 35px 50px -15px rgba(78, 105, 35, 0.5);
 }
+
+.sr-only {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    white-space: nowrap; 
+    overflow: hidden;
+}
+
+*:focus {
+    outline: 2px dotted var(--color-text-active);
+}
