--- a/public/global.css
+++ b/public/global.css
@@ -14,9 +14,9 @@ html {
 }
 
 body {
-    background: url('/assets/img/trees-1.png'), url('/assets/img/trees-2.png'), var(--color-bg);
-    background-position: bottom -1rem left -100%, bottom -1rem right -100%;
-    background-size: 30rem;
+    background: url('/assets/img/trees-1.png'), url('/assets/img/trees-2.png'), url('/assets/img/santa.png'), var(--color-bg);
+    background-position: bottom -1rem left -100%, bottom -1rem right -100%, top 360px right -20rem;
+    background-size: 30rem, 30rem, 10rem;
     background-repeat: no-repeat;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 2.25rem;
@@ -59,7 +59,7 @@ body {
 }
 
 body.christmas-theme {
-    background-position: bottom -1rem left -10rem, bottom -1rem right -10rem;
+    background-position: bottom -1rem left -10rem, bottom -1rem right -10rem, top 360px right -2.5rem;
 }
 
 .sr-only {
@@ -78,6 +78,6 @@ body.christmas-theme {
 
 @media only screen and (min-width: 600px) {
     body {
-        background-size: 42rem;
+        background-size: 42rem, 42rem, 15rem;
     }
 }
