--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,5 @@
+/* reset */
+
 html {
     position: relative;
     box-sizing: border-box;
@@ -13,9 +15,12 @@ html {
     padding: 0;
 }
 
+/* body */
+
 body {
+    min-height: 100vh;
     background: url('/assets/img/trees-1.png'), url('/assets/img/trees-2.png'), url('/assets/img/santa.png'), var(--color-bg);
-    background-position: bottom -1rem left -100%, bottom -1rem right -100%, top 360px right -20rem;
+    background-position: bottom -1rem left -120%, bottom -1rem right -120%, top 360px right -20rem;
     background-size: 30rem, 30rem, 10rem;
     background-repeat: no-repeat;
     font-family: 'Josefin Sans', sans-serif;
@@ -23,10 +28,14 @@ body {
     transition: background 1s;
 }
 
+/* custom properties */
+
 :root {
     --color-bright-blue: hsl(220, 98%, 61%);
     --gradient-primary: linear-gradient(to bottom right, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 }
+
+/* themes */
 
 .dark-theme {
     --color-bg: hsl(235, 21%, 11%);
@@ -62,6 +71,8 @@ body.christmas-theme {
     background-position: bottom -1rem left -10rem, bottom -1rem right -10rem, top 360px right -2.5rem;
 }
 
+/* accessibility */
+
 .sr-only {
     width: 1px;
     height: 1px;
@@ -76,8 +87,11 @@ body.christmas-theme {
     outline: 2px dotted var(--color-text-active);
 }
 
+/* media queries */
+
 @media only screen and (min-width: 600px) {
     body {
         background-size: 42rem, 42rem, 15rem;
+        background-position: bottom -1rem left -100%, bottom -1rem right -100%, top 360px right -20rem;
     }
 }
