--- a/public/global.css
+++ b/public/global.css
@@ -18,11 +18,14 @@ html {
 /* body */
 
 body {
+    
     min-height: 100vh;
-    background: url('/assets/img/trees-1.png'), url('/assets/img/trees-2.png'), url('/assets/img/santa.png'), var(--color-bg);
+    /* background: url('/assets/img/trees-1.png'), url('/assets/img/trees-2.png'), url('/assets/img/santa.png'), var(--color-bg); */
+    background-image: url('/assets/img/trees-1.png'), url('/assets/img/trees-2.png'), url('/assets/img/santa.png');
     background-position: bottom -1rem left -42rem, bottom -1rem right -42rem, top 360px right -20rem;
-    background-size: 30rem, 30rem, 10rem;
     background-repeat: no-repeat;
+    background-size: 30rem, 30rem, 10rem;
+    background-color: var(--color-bg);
     font-family: 'Josefin Sans', sans-serif;
     font-size: 2.25rem;
     transition: background 1s;
